editing about me and fixing swiper pagination so swiper aligns with buttons

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -648,7 +648,7 @@ button {
 }
 
 .swiper-container-horizontal > .swiper-pagination-bullets {
-  bottom: -2.5rem;
+  bottom: -2rem;
 }
 
 .swiper-pagination-bullet-active {
